added getofferlist
