# src/main/kotlin/ru/kotleteri/data/models/base/OfferModel.kt
@@ -1,5 +1,6 @@
 package ru.kotleteri.data.models.base
 
+import ru.kotleteri.data.models.inout.offers.GetOfferResponseModel
 import java.time.LocalDateTime
 import java.util.UUID
 
@@ -11,4 +12,15 @@ data class OfferModel(
     val discount: Double,
     val startDate: LocalDateTime,
     val endDate: LocalDateTime
-)
+) {
+    fun toGetOfferResponse() =
+        GetOfferResponseModel(
+            id.toString(),
+            companyId.toString(),
+            title,
+            description,
+            discount,
+            startDate.toString(),
+            endDate.toString()
+        )
+}
